twitter icons, twitter link

--- a/src/grid.html
+++ b/src/grid.html
@@ -9,6 +9,9 @@
       <!--[if (gte IE 6)&(lte IE 8)]>
         <script type="text/javascript" src="js/selectivizr.js"></script>
       <![endif]-->
+      <!--[if lt IE 9]>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
+      <![endif]-->
     </head>
     <body>
         <div class="wrapper">
