--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,18 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Dev Index</title>
+      <title>Index</title>
       <link rel="stylesheet" type="text/css" media="all" href="css/normalize.min.css">
       <link rel="stylesheet" type="text/css" media="all" href="css/main.min.css">
+      <!--[if (gte IE 6)&(lte IE 8)]>
+        <script type="text/javascript" src="js/selectivizr.js"></script>
+      <![endif]-->
+      <!--[if lt IE 9]>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
+      <![endif]-->
     </head>
     <body>
         <div class="wrapper">
-          
           @@include('./partials/_module-author.html')
           @@include('./partials/_module-quote.html')
           @@include('./partials/_layout-grid.html')
