--- a/src/grid.html
+++ b/src/grid.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Grid</title>
-      <link rel="stylesheet" type="text/css" media="all" href="css/normalize.min.css">
-      <link rel="stylesheet" type="text/css" media="all" href="css/main.min.css">
+      <link rel="stylesheet" type="text/css" media="all" href="css/normalize.css">
+      <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
       <!--[if (gte IE 6)&(lte IE 8)]>
         <script type="text/javascript" src="js/selectivizr.js"></script>
       <![endif]-->
